objects/LeaveRequest__c.object
<CustomObject>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee ID</label>
        <referenceTo>Employee_Details__c</referenceTo>
        <relationshipLabel>LeaveRequests</relationshipLabel>
        <relationshipName>LeaveRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaveType__c</fullName>
        <label>LeaveType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LeaveRequest</label>
    <nameField>
        <label>LeaveRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeaveRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>